Fix the superscripts.
The unicode superscripts
e.g. ² and ³
work but they were tiny and hard to read.
The new superscripts are bigger and easier to read.

And fix a broken link.

--- a/src/style.css
+++ b/src/style.css
@@ -109,3 +109,15 @@ pre {
 .figure div {
   text-align: center;
 }
+
+.superscript {
+  position: relative;
+  font-size:0.667em;
+  position: relative;
+  bottom:0.5em;
+}
+.superscript::before {
+  /* 2pt is a hack!  I tried 0.1em, but it seems like em's aren't completely linear.  They didn't work well with small values. */
+  font-size:2pt;
+  content: ' ';
+}
